<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_header"
            style="@style/HeaderTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_sub_header"
            style="@style/SubHeaderTextStyle" />

        <ScrollView
            android:id="@+id/question_layout"
            android:layout_width="match_parent"
            android:layout_height="350dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1"
                    style="@style/QuestionTextStyle"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_group_1">
                    <RadioButton
                        android:id="@+id/radio_one_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_1"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_one_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_2"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_one_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_3"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_one_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_4"
                        style="@style/CheckboxStyle"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2"
                    style="@style/QuestionTextStyle"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_group_2">
                    <RadioButton
                        android:id="@+id/radio_two_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_2_1"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_two_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_2_2"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_two_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_2_3"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_two_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_2_4"
                        style="@style/CheckboxStyle"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3"
                    style="@style/QuestionTextStyle"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_group_3">
                    <RadioButton
                        android:id="@+id/radio_three_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_3_1"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_three_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_3_2"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_three_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_3_3"
                        style="@style/CheckboxStyle"/>
                    <RadioButton
                        android:id="@+id/radio_three_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_3_4"
                        style="@style/CheckboxStyle"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4"
                    style="@style/QuestionTextStyle"/>
                <CheckBox
                    android:id="@+id/check_four_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_1"
                    style="@style/CheckboxStyle"/>
                <CheckBox
                    android:id="@+id/check_four_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_2"
                    style="@style/CheckboxStyle"/>
                <CheckBox
                    android:id="@+id/check_four_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_3"
                    style="@style/CheckboxStyle"/>
                <CheckBox
                    android:id="@+id/check_four_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_4"
                    style="@style/CheckboxStyle"/>
                <CheckBox
                    android:id="@+id/check_four_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_5"
                    style="@style/CheckboxStyle"/>
                <CheckBox
                    android:id="@+id/check_four_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_6"
                    style="@style/CheckboxStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5"
                    style="@style/QuestionTextStyle"/>
                <EditText
                    android:id="@+id/edit_five"
                    android:hint="@string/answer_5_hint"
                    style="@style/EditTextStyle" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/score_text"
            android:gravity="center_horizontal"
            style="@style/QuestionTextStyle"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/view_score_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_score"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                style="@style/ButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
